# if-i-were-to-build-a-startup-web-app

./: CHANGELOG.md  README.md  package.json
docs/: database.md  database.rst  development-containment.md  development-containment.rst  development-environment.md  development-machine.md  development-machine.rst  django-react-security-and-architecture.md  explorations.md  styling-framework-system.md  ui-framework.md  ui-server-interface.md  ui-server-interface.rst  web-framework.md  web-framework.rst
example/: README.md  test.sh
example/app/: apps.py
example/app/forms/auth/: socialaccount.py
example/app/templates/_layouts/: main.html
example/app/templates/account/: signup.html
example/app/templatetags/: forms.py  messages.py
examples/django-limited-ajax-react-tailwind/: README.md  pyproject.toml
examples/django-limited-ajax-react-tailwind/myapp/: urls.py  views.py
examples/django-limited-ajax-react-tailwind/myapp/templates/: base.html  index.html
examples/django-limited-ajax-react-tailwind/myapp/templates/registration/: login.html
examples/django-limited-ajax-react-tailwind/mysite/: settings.py  urls.py
explorations/1-django-contrib-auth-forms/: README.md  manage.py  poetry.toml  pyproject.toml
explorations/1-django-contrib-auth-forms/app/: urls.py  views.py
explorations/1-django-contrib-auth-forms/app/templates/: index.html
explorations/1-django-contrib-auth-forms/app/templatetags/: forms.py
explorations/1-django-contrib-auth-forms/project/: settings.py
explorations/2-django-allauth/: README.md  manage.py  pyproject.toml
explorations/2-django-allauth/app/: adapter.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
explorations/2-django-allauth/app/forms/: __init__.py  auth.py
explorations/2-django-allauth/app/forms/auth/: account.py
explorations/2-django-allauth/app/migrations/: 0001_set_site.py
explorations/2-django-allauth/app/templates/: index.html
explorations/2-django-allauth/app/templates/_layouts/: auth.html  base.html  main.html
explorations/2-django-allauth/app/templates/account/: email_confirm.html  login.html  signup.html  verification_sent.html  verified_email_required.html
explorations/2-django-allauth/app/templates/account/messages/: email_confirmation_sent.txt
explorations/2-django-allauth/app/templates/widgets/: checkbox.html  input.html
explorations/2-django-allauth/app/templatetags/: forms.py
explorations/2-django-allauth/app/tests/: test_views.py
explorations/2-django-allauth/app/urls/: __init__.py  auth.py
explorations/2-django-allauth/app/urls/auth/: account.py  socialaccount.py
explorations/2-django-allauth/app/views/: auth.py
explorations/2-django-allauth/project/: settings.py  urls.py
explorations/3-django-server-react-ui/: README.md  pyproject.toml
explorations/3-django-server-react-ui/app/: adapter.py  views.py
explorations/3-django-server-react-ui/app/templates/: index.html
explorations/3-django-server-react-ui/app/urls/: __init__.py
explorations/3-django-server-react-ui/project/: settings.py
explorations/3-django-server-react-ui/ui/: .env.development  .gitignore  package.json
explorations/3-django-server-react-ui/ui/public/: index.html
explorations/3-django-server-react-ui/ui/src/: .env.development  ReactApp.js  ReactApp.jsx  ReactApp.test.jsx  index.js  index.jsx
explorations/4-django-allauth-react-proxy/: README.md
explorations/4-django-allauth-react-proxy/api/: .gitignore  pyproject.toml
explorations/4-django-allauth-react-proxy/api/app/: urls.py
explorations/4-django-allauth-react-proxy/api/project/: settings.py  urls.py
explorations/4-django-allauth-react-proxy/client/: package.json
explorations/4-django-allauth-react-proxy/client/public/: index.html
explorations/4-django-allauth-react-proxy/django/: pyproject.toml  setup.cfg
explorations/4-django-allauth-react-proxy/react/: package.json
explorations/4-django-allauth-react-proxy/server/: pyproject.toml
explorations/4-django-allauth-react-proxy/ui/: package.json
explorations/django-authentication/: README.md  pyproject.toml
explorations/django-authentication/app/: apps.py  forms.py  urls.py  views.py
explorations/django-authentication/app/templates/: base.html  index.html
explorations/django-authentication/app/templates/_layouts/: auth.html  base.html
explorations/django-authentication/app/templates/forms/widgets/: text.html
explorations/django-authentication/app/templates/registration/: login.html  sign_up.html
explorations/django-authentication/app/templates/widgets/: input.html
explorations/django-authentication/app/templatetags/: forms.py
explorations/django-authentication/project/: asgi.py  settings.py  urls.py  wsgi.py
(+57 files in other folders)
