[tool.poetry]
name = "django-limited-ajax-react-tailwind"
version = "1.0.0"
description = ""
authors = ["Todd Wolfson <todd@twolfson.com>"]
readme = "README.md"
packages = [{include = "django_limited_ajax_react_tailwind"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
