[tool.poetry]
name = "django-limited-ajax-react-tailwind"
version = "1.0.0"
description = ""
authors = ["Todd Wolfson <todd@twolfson.com>"]
readme = "README.md"

# Empty because we aren't publishing this repo to PyPI, https://python-poetry.org/docs/pyproject/#packages
packages = []

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
