[tool.poetry]
name = "django-authentication"
version = "1.0.0"
description = ""
authors = ["Todd Wolfson <todd@twolfson.com>"]
readme = "README.md"

# Empty because we aren't publishing this repo to PyPI, https://python-poetry.org/docs/pyproject/#packages
packages = []

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
# Werkzeug required by runserver_plus in django-extensions
werkzeug = "^2.3.4"
djlint = "^1.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
